# servicebus-messaging-patterns

./: .gitignore  README.md
python-samples/: .env  pyproject.toml
python-samples/.deploy/: Pulumi.yaml  __main__.py
python-samples/.devcontainer/: Dockerfile  devcontainer.json
python-samples/queue_basics/: receiver.py  sender.py
python-samples/topic_basics/: receiver.py  sender.py
