[tool.poetry]
name = "python-samples"
version = "0.1.0"
description = ""
authors = ["cecilphillip <cecilphillip@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pulumi = "^1.12.1"
pulumi-azure = "^2.1.0"
autopep8 = "^1.5"
isodate = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
